# AIGC_seedance_perple

./: .gitignore  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
skills/aigc-video-studio/: SKILL.md
skills/aigc-video-studio/references/: collaboration.md  methodology.md  profiles.md  state-machine.md
skills/aigc-video-studio/scripts/: advance_stage.py  backup.py  budget_guard.py  episode_manager.py  feedback_intake.py  init_project.py  lessons_writeback.py  pipeline_scheduler.py  reuse_shots.py  verify_capabilities.py
skills/aigc-video-studio/sub-skills/audio-post/: SKILL.md
skills/aigc-video-studio/sub-skills/channel-api/: SKILL.md
skills/aigc-video-studio/sub-skills/character-foundry/: SKILL.md
skills/aigc-video-studio/sub-skills/concept-brief/: SKILL.md
skills/aigc-video-studio/sub-skills/edit-finish/: SKILL.md
skills/aigc-video-studio/sub-skills/feature-deconstruct/: SKILL.md
skills/aigc-video-studio/sub-skills/gen-runner/: SKILL.md
skills/aigc-video-studio/sub-skills/platform-higgsfield/: SKILL.md
tests/: conftest.py  test_advance_stage.py  test_api_adapter.py  test_budget_guard.py  test_compile_genspec.py  test_compliance_check.py  test_e2e_series.py  test_e2e_smoke.py  test_ingest.py  test_init_project.py  test_ledger.py  test_make_taskcards.py  test_metrics.py  test_p2_smoke.py  test_phase10.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_pipeline_scheduler.py  test_prompt_qc.py  test_select_take.py  test_validate.py  test_verify_capabilities.py  test_vlm_screen.py
(+97 files in other folders)
