[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aigc-video-studio"
version = "0.1.0"
description = "AIGC 短视频创作 Agent Harness Skills 系统（基于 Seedance 2.0 v2.2 设计稿）"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
api = ["httpx>=0.27"]

[tool.setuptools]
# 本仓以脚本/技能为主，不打包为可分发库
py-modules = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"
